--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "15.3.2",
-    "react-native": "0.34.1"
+    "react": "^16.0.0-beta.5",
+    "react-native": "^0.49.3"
   }
 }
