--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react": "^16.5.0",
+    "react-native": "^0.57.0"
   },
   "devDependencies": {
-    "babel-jest": "23.4.2",
-    "babel-preset-react-native": "^5",
-    "jest": "23.4.2",
-    "react-test-renderer": "16.4.1"
+    "@babel/core": "^7.0.0",
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "^0.45.0",
+    "react-test-renderer": "16.3.1",
+    "schedule": "^0.4.0"
   },
   "jest": {
     "preset": "react-native"
